--- a/src/pages/demo/cluster-demo.astro
+++ b/src/pages/demo/cluster-demo.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro';
+import Layout from '@/layouts/Layout.astro';
 
 import ClusterExample from '@/components/ClusterExample.astro';
 ---
