--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro';
+import Layout from '@/layouts/Layout.astro';
 
 import { Image } from 'astro:assets';
 import Card from '@/components/Card.astro';
