--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@/layouts/LayoutWcover.astro';
+import Layout from '@/layouts/Layout.astro';
 import { Imposter, Cluster } from '@cc/index.js';
 ---
 
