--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -5,7 +5,7 @@ import { Image } from 'astro:assets';
 
 // import DummCards from '@cc/DummyCards.astro'
 
-import Layout from '@/layouts/LayoutWcover.astro';
+import Layout from '@/layouts/Layout.astro';
 
 const W = '100';
 const H = '50';
