--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -5,45 +5,6 @@ import 'open-props/postcss/normalize';
 import './variables.css';
 import './modular-scale.css';
 // Supports weights 300-800
+import './layoutStyles/box.css';
 import '@fontsource-variable/open-sans';
 ---
-
-<style is:global>
-  html {
-    font-family: var(--font-sans);
-
-    /* set defaults */
-    --brand: var(--brand-light);
-    --text-1: var(--text-1-light);
-    --text-2: var(--text-2-light);
-    --surface-1: var(--surface-1-light);
-    --surface-2: var(--surface-2-light);
-    --surface-3: var(--surface-3-light);
-    --surface-4: var(--surface-4-light);
-    --surface-shadow: var(--surface-shadow-light);
-    --shadow-strength: var(--shadow-strength-light);
-  }
-  body {
-    font-family: 'Open Sans Variable', sans-serif;
-  }
-
-  [class^='box'].invert {
-    filter: invert(100%);
-  }
-
-  [class^='box'] {
-    * {
-      color: inherit;
-      background-color: inherit;
-    }
-  }
-  .myLayoutColors {
-    background-color: var(--surface-3);
-    color: var(--text-3);
-  }
-  .gradient-text {
-    background: var(--gradient-1);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-  }
-</style>
