--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -7,15 +7,19 @@ import type { BlogSchemaType } from '@/schemas/index.ts';
 
 import FormattedDate from '@/components/FormattedDate.astro';
 // import Author from '@cc/Author.astro'
-import Layout from '@/layouts/Layout.astro';
+import Layout from '@/layouts/SplashLayout.astro';
+import type { AstroComponentFactory } from 'astro/runtime/server/render/astro/index.js';
 
-type Props = BlogSchemaType & {
-  children: unknown;
-};
+interface Props {
+  blogData: BlogSchemaType;
+  children: AstroComponentFactory;
+}
+const { blogData } = Astro.props;
 
-const { title, description, pubDate, cover, author } = Astro.props;
+const { title, description, pubDate, cover, author } = blogData;
 
-const { data } = await getEntry('authors', author.id);
+const results = await getEntry('authors', author.id);
+const { name } = results.data;
 ---
 
 <Layout title="blog post" description="Lorem ipsum dolor sit amet">
@@ -33,7 +37,7 @@ const { data } = await getEntry('authors', author.id);
       <FormattedDate date={pubDate} />
 
       <Box invert><h3>{title}</h3></Box>
-      <Box invert><hh2>written by {data.name}</hh2></Box>
+      <Box invert><hh2>written by {name}</hh2></Box>
       <hr />
 
       <slot />
