--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -22,7 +22,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link
+<!-- <link
   rel="preload"
   href="/fonts/atkinson-regular.woff"
   as="font"
@@ -35,7 +35,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
   as="font"
   type="font/woff"
   crossorigin
-/>
+/> -->
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
