--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -6,5 +6,5 @@ import './variables.css';
 import './modular-scale.css';
 // Supports weights 300-800
 import './layoutStyles/box.css';
-import '@fontsource-variable/open-sans';
+import './columns.css';
 ---
