--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -7,7 +7,7 @@ import type { BlogSchemaType } from '@/schemas/index.ts';
 
 import FormattedDate from '@/components/FormattedDate.astro';
 // import Author from '@cc/Author.astro'
-import Layout from '@/layouts/SplashLayout.astro';
+import Layout from '@/layouts/Layout.astro';
 import type { AstroComponentFactory } from 'astro/runtime/server/render/astro/index.js';
 
 interface Props {
