--- a/src/layouts/NotCenterLayout.astro
+++ b/src/layouts/NotCenterLayout.astro
@@ -2,7 +2,7 @@
 import BaseHead from '@/components/BaseHead.astro';
 import Header from '@/components/Header.astro';
 import Footer from '@/components/Footer.astro';
-import { Cover, Center } from '@cc/index.js';
+import { Cover } from '@cc/index.js';
 
 interface Props {
   title?: string;
