--- a/src/components/SelectComponent.astro
+++ b/src/components/SelectComponent.astro
@@ -1,9 +1,9 @@
 ---
-const DEFAULT_VAL = '--layout Custom Web Component';
+const DEFAULT_VAL = 'astro dropdown';
 ---
 
 <select data-navigate-select data-message={DEFAULT_VAL}>
-  <option value="/">{DEFAULT_VAL}</option>
+  <option value="/">astro dropdown</option>
   <option value="/demo/cluster-demo">cluster</option>
   <option value="/demo/sidebar-demo">sidebar</option>
   <option value="/demo/switcher-demo">switcher-demo</option>
