--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,9 +10,10 @@ import AstroDropDown from '@/astro-web-component/AstroDropDown.astro';
 
 <Box padding="var(--s1)" borderWidth="0">
   <Cluster justify="space-between">
-    <Box padding="0" borderWidth="1px">
+    <!-- <Box padding="0" borderWidth="1px">
+      <h4>select</h4>
       <Select client:only="react" transition:persist />
-    </Box>
+    </Box> -->
     <!-- <Box padding="0" borderWidth="1px">
       <HeadlessUI client:only="react" transition:persist /></Box
     > -->
