--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -3,8 +3,22 @@
 import 'open-props/postcss/buttons';
 import 'open-props/postcss/normalize';
 import './variables.css';
+import './utility-classes.css';
 import './modular-scale.css';
+
 // Supports weights 300-800
 import './layoutStyles/box.css';
 import './columns.css';
 ---
+
+<style is:global>
+  :root {
+    --my-bg-color: var(--gradient-5);
+    --my-color: var(--text-2);
+  }
+
+  body {
+    color: var(--my-color);
+    background-color: var(--my-bg-color);
+  }
+</style>
