--- a/src/astro-web-component/astro-modal/index.astro
+++ b/src/astro-web-component/astro-modal/index.astro
@@ -34,7 +34,7 @@ const { open } = Astro.props;
 </astro-modal-l>
 
 <script>
-  import { isOpen } from '@/store/index.ts';
+  // import { isOpen } from '@/store/index.ts';
 
   // Define the behaviour for our new type of HTML element.
   class AstroModal extends HTMLElement {
