--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,15 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 import { Box, Stack, Center } from '@cc/index.js';
-import AppDrawer from '@/web-components/AppDrawer.astro';
+// import AppDrawer from '@/web-components/AppDrawer.astro';
+
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
 <Layout title="About Me" description="Lorem ipsum dolor sit amet">
   <Center>
     <!-- <Stack recursive> -->
-    <Box invert>
+    <Box invert >
       <h3>Sagittis purus sc</h3>
     </Box>
     <!-- <AppDrawer open disabled /> -->
