--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,5 @@
 ---
-import { Box } from '@cc/index.js';
+import { Box } from '@/astro-custom-layout-components';
 
 interface Props {
   headline?: string;
