--- a/src/components/Card/index.astro
+++ b/src/components/Card/index.astro
@@ -1,6 +1,6 @@
 ---
 import { getEntry } from 'astro:content';
-import { Frame, Stack } from '@cc/index.js';
+import { Frame, Stack } from '@/astro-custom-layout-components';
 // import { Debug } from 'astro:components';
 // import type { HTMLAttributes } from 'astro/types';
 // import type { CollectionEntry } from 'astro:content';
