--- a/src/components/TagContainer.astro
+++ b/src/components/TagContainer.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Icon, Cluster } from '@cc/index.js';
+import { Box, Icon, Cluster } from '@/astro-custom-layout-components';
 interface Props {
   tags: string[];
   tagCounts?: Record<string, number>;
