--- a/src/layouts/BareLayout.astro
+++ b/src/layouts/BareLayout.astro
@@ -1,8 +1,7 @@
 ---
 import BaseHead from '@/components/BaseHead.astro';
-import Header from '@/components/Header.astro';
-import Footer from '@/components/Footer.astro';
-import { Cover, Center } from '@cc/index.js';
+
+import { Cover, Center } from '@/astro-custom-layout-components';
 
 interface Props {
   title?: string;
