--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,6 +1,6 @@
 ---
 import { getEntry } from 'astro:content';
-import { Box, Stack, Center } from '@cc/index.js';
+import { Box, Stack, Center } from '@/astro-custom-layout-components';
 import { Image } from 'astro:assets';
 
 import type { BlogSchemaType } from '@/schemas/index.ts';
