--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from '@/components/BaseHead.astro';
 
-import { Frame, Switcher } from '@cc/index.js';
+import { Frame, Switcher } from '@/astro-custom-layout-components';
 import { Image } from 'astro:assets';
 import Andy from '../assets/Andy.jpg';
 
