--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -3,7 +3,7 @@ import Layout from '@/layouts/Layout.astro';
 
 import { Image } from 'astro:assets';
 import Card from '@/components/Card.astro';
-import { Frame, Grid } from '@cc/index.js';
+import { Frame, Grid } from '@/astro-custom-layout-components';
 
 const W = '120';
 const H = '120';
