--- a/src/pages/demo/sidebar-demo.astro
+++ b/src/pages/demo/sidebar-demo.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 
-import { Box, Sidebar } from '@cc/index.js';
+import { Box, Sidebar } from '@/astro-custom-layout-components';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
