--- a/src/pages/demo/switcher-demo.astro
+++ b/src/pages/demo/switcher-demo.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import { Box, Switcher } from '@cc/index';
+import { Box, Switcher } from '@/astro-custom-layout-components';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
