--- a/src/ui/web-components/NavDropDown.astro
+++ b/src/ui/web-components/NavDropDown.astro
@@ -2,10 +2,10 @@
 
 ---
 <astro-navigate-select>
-  <h6>Astro Dropdown</h6>
+  <h6>js wc</h6>
   <label for="demo-select">Select a layout demo:</label>
   <select data-navigate-select id="demo-select">
-    <option value="/"></option>
+    <option value="/">home</option>
     <option value="/demo/cluster-demo">cluster</option>
     <option value="/demo/sidebar-demo">sidebar</option>
     <option value="/demo/switcher-demo">switcher-demo</option>
@@ -13,16 +13,15 @@
     <option value="/demo/reel-demo">reel-demo</option>
     <option value="/demo/imposter-demo">imposter-demo</option>
     <option value="/demo/harmonic-demo">harmonic-demo</option>
+    <option value="/demo/stack-demo">stack-demo</option>
   </select>
 </astro-navigate-select>
 
 <script>
   import { navigate } from 'astro:transitions/client';
-
-
   class AstroNavigateSelect extends HTMLElement {
 
-    
+
     constructor() {
       super();
 
