--- a/src/components/Card/top-bottom.astro
+++ b/src/components/Card/top-bottom.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Cluster } from '@cc/index.js';
+import { Box, Cluster } from '@/astro-custom-layout-components';
 ---
 
 <Box borderWidth="0" padding="var(--s0)">
