--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,33 +1,33 @@
 ---
 import HeaderLink from './HeaderLink.astro';
 
-import { Box, Cluster, Switcher } from '@cc/index';
-
+import { Box, Cluster, Switcher } from '@/astro-custom-layout-components';
 
 // import { DropDown as HeadlessUI } from '@/ui/react/DropDown.tsx';
-import AstroNavigateSelect from '@/astro-web-component/AstroNavigateSelect.astro';
+import NavDropDown from '@/ui/web-components/NavDropDown.astro';
+
+// import NavDropDown from '@/ui/react/Select.tsx'
 ---
 
 <Box padding="var(--s1)" borderWidth="0">
-  <Cluster justify="space-between">
-    <!-- <Box padding="0" borderWidth="1px">
-      <h4>select</h4>
-      <Select client:only="react" transition:persist />
-    </Box> -->
-    <!-- <Box padding="0" borderWidth="1px">
+  <!-- <Cluster justify="space-between"> -->
+
+  <Box padding="0" borderWidth="2px">
+    <NavDropDown />
+  </Box>
+  <!-- <Box padding="0" borderWidth="1px">
       <HeadlessUI client:only="react" transition:persist /></Box
     > -->
-  
 
-    <Box borderWidth="0" padding="0">
-      <Cluster align="baseline" justify="flex-start" space="var(--s6)">
-        <Switcher threshold="20ch" limit={6}>
-          <HeaderLink href="/">Home</HeaderLink>
-          <HeaderLink href="/blog">Blog</HeaderLink>
-          <HeaderLink href="/about">About</HeaderLink>
-          <HeaderLink href="/ui">Ui</HeaderLink>
-        </Switcher>
-      </Cluster>
-    </Box>
-  </Cluster>
+  <Box padding="0" borderWidth="2px">
+    <Cluster align="baseline" justify="flex-start" space="var(--s6)">
+      <Switcher threshold="20ch" limit={6}>
+        <HeaderLink href="/">Home</HeaderLink>
+        <HeaderLink href="/blog">Blog</HeaderLink>
+        <HeaderLink href="/about">About</HeaderLink>
+        <HeaderLink href="/ui">Ui</HeaderLink>
+      </Switcher>
+    </Cluster>
+  </Box>
+  <!-- </Cluster> -->
 </Box>
