--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from '@/layouts/Layout.astro';
-import { Imposter, Cluster } from '@cc/index.js';
+import { Imposter, Cluster } from '@/astro-custom-layout-components';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
