--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -8,6 +8,7 @@ import './modular-scale.css';
 
 // Supports weights 300-800
 import './layoutStyles/box.css';
+// import './layoutStyles/EveryLayout.css';
 import './columns.css';
 ---
 
@@ -15,6 +16,9 @@ import './columns.css';
   :root {
     --my-bg-color: var(--gradient-5);
     --my-color: var(--text-2);
+
+    --color-light: var(--surface-2);
+    --color-dark: var(--text-2);
   }
 
   body {
