--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -5,9 +5,9 @@ import { Image } from 'astro:assets';
 
 import type { BlogSchemaType } from '@/schemas/index.ts';
 
-import FormattedDate from '@/components/FormattedDate.astro';
+import FormattedDate from '#components/FormattedDate.astro';
 // import Author from '@cc/Author.astro'
-import Layout from '@/layouts/Layout.astro';
+import Layout from '#layouts/Layout.astro';
 import type { AstroComponentFactory } from 'astro/runtime/server/render/astro/index.js';
 
 interface Props {
