--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '@/layouts/Layout.astro';
+import Layout from '#layouts/Layout.astro';
 
 import { Image } from 'astro:assets';
-import Card from '@/components/Card.astro';
+import Card from '#components/Card.astro';
 import { Frame, Grid } from '@/astro-custom-layout-components';
 
 const W = '120';
