--- a/src/pages/demo/harmonic-demo.astro
+++ b/src/pages/demo/harmonic-demo.astro
@@ -10,7 +10,7 @@
 //   return value
 // }
 
-import Layout from '@/layouts/Layout.astro';
+import Layout from '#layouts/Layout.astro';
 import { Cluster, Box } from '@/astro-custom-layout-components';
 ---
 
