--- a/src/pages/demo/reel-demo.astro
+++ b/src/pages/demo/reel-demo.astro
@@ -1,9 +1,9 @@
 ---
 import { Reel, Frame } from '@/astro-custom-layout-components';
-import Card from '@/components/Card.astro';
+import Card from '#components/Card.astro';
 import { Image } from 'astro:assets';
 
-import Layout from '@/layouts/SimpleLayout.astro';
+import Layout from '#layouts/SimpleLayout.astro';
 
 const W = '50';
 const H = '50';
