--- a/src/pages/demo/stack-demo.astro
+++ b/src/pages/demo/stack-demo.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '@/layouts/SimpleLayout.astro';
+import Layout from '#layouts/SimpleLayout.astro';
 
-import MyStackDemo from '@/components/MyStackDemo.astro';
+import MyStackDemo from '#components/MyStackDemo.astro';
 ---
 
 <Layout>
