--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@/layouts/Layout.astro';
+import Layout from '#layouts/Layout.astro';
 import { Center } from '@/astro-custom-layout-components';
 import Box from '@/astro-custom-layout-components/Box/index.astro';
 // import AppDrawer from '@/web-components/AppDrawer.astro';
