--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '@/layouts/Layout.astro';
 import { getCollection } from 'astro:content';
 
-import TagContainer from '@/components/TagContainer.astro';
+import TagContainer from '#components/TagContainer.astro';
 
 const allBlogPost = await getCollection('blog');
 
