--- a/src/pages/ui.astro
+++ b/src/pages/ui.astro
@@ -1,6 +1,6 @@
 ---
-import ComponentLibrary from '@/components/ComponentLibrary.astro';
-import Layout from '@/layouts/Layout.astro';
+import ComponentLibrary from '#components/ComponentLibrary.astro';
+import Layout from '#layouts/Layout.astro';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
