--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -7,7 +7,7 @@ import './utility-classes.css';
 import './modular-scale.css';
 
 // Supports weights 300-800
-import './layoutStyles/box.css';
+// import './layoutStyles/box.css';
 // import './layoutStyles/EveryLayout.css';
 import './columns.css';
 ---
