--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
-import GlobalStyles from '@/styles/GlobalStyles.astro';
+import GlobalStyles from '#styles/GlobalStyles.astro';
 import { ViewTransitions } from 'astro:transitions';
 
 interface Props {
