--- a/src/layouts/BareLayout.astro
+++ b/src/layouts/BareLayout.astro
@@ -1,5 +1,5 @@
 ---
-import BaseHead from '@/components/BaseHead.astro';
+import BaseHead from '#components/BaseHead.astro';
 
 import { Cover, Center } from '@/astro-custom-layout-components';
 
