--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import BaseHead from '@/components/BaseHead.astro';
-import Header from '@/components/Header.astro';
-import Footer from '@/components/Footer.astro';
+import BaseHead from '#components/BaseHead.astro';
+import Header from '#components/Header.astro';
+import Footer from '#components/Footer.astro';
 import { Cover, Center } from '@/astro-custom-layout-components';
 
 interface Props {
