--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -1,11 +1,11 @@
 ---
 // import { z } from 'astro:content';
-import BaseHead from '@/components/BaseHead.astro';
+import BaseHead from '#components/BaseHead.astro';
 // import { Cover, Center, Box, Stack } from '@/astro-custom-layout-components';
 // import type { RmUnitType } from '@cc/Types.js';
 
-// import Header from '@/components/Header.astro';
-// import Footer from '@/components/Footer.astro';
+// import Header from '#components/Header.astro';
+// import Footer from '#components/Footer.astro';
 // import SpeedInsights from '@vercel/speed-insights/astro';
 
 interface Props {
