--- a/src/layouts/SplashLayout.astro
+++ b/src/layouts/SplashLayout.astro
@@ -1,5 +1,5 @@
 ---
-import BaseHead from '@/components/BaseHead.astro';
+import BaseHead from '#components/BaseHead.astro';
 
 import { Frame, Switcher } from '@/astro-custom-layout-components';
 import { Image } from 'astro:assets';
