--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 
-import Layout from '@/layouts/BlogPost.astro';
+import Layout from '#layouts/BlogPost.astro';
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
