--- a/src/pages/demo/colums-demo.astro
+++ b/src/pages/demo/colums-demo.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@/layouts/Layout.astro';
+import Layout from '#layouts/Layout.astro';
 import { getRandomPic } from '@/lib/index.ts';
 
 import { Image } from 'astro:assets';
