--- a/src/pages/demo/modal-demo.astro
+++ b/src/pages/demo/modal-demo.astro
@@ -10,7 +10,7 @@
 //   return value
 // }
 
-import Layout from '@/layouts/BareLayout.astro';
+import Layout from '#layouts/BareLayout.astro';
 // import Modal from '@/ui/astro/modal/Modal.astro';
 import Modal from '@/web-component/astro-modal/index.astro';
 import { Box } from '@/astro-custom-layout-components';
