--- a/src/pages/splash.astro
+++ b/src/pages/splash.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '@/layouts/SplashLayout.astro';
+import Layout from '#layouts/SplashLayout.astro';
 
 // import { SITE_TITLE, SITE_DESCRIPTION } from '../consts'
 
