--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,11 +1,11 @@
 ---
 // import { Debug } from 'astro:components';
 
-import Layout from '@/layouts/Layout.astro';
+import Layout from '#layouts/Layout.astro';
 import { Box, Stack } from '@/astro-custom-layout-components';
 import { getCollection } from 'astro:content';
 // import Card from '@components/CardBySlug.astro';
-import BlogCard from '@/components/Card/index.astro';
+import BlogCard from '#components/Card/index.astro';
 
 // import type { CollectionEntry } from 'astro:content'
 
