--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -35,7 +35,7 @@ const { tag } = Astro.params;
 const { posts } = Astro.props;
 ---
 
-<Layout title={tag as string}>
+<Layout title={tag}>
   <!-- <Debug {tag} />
   <Debug {posts} /> -->
   <Stack space="var(--s1)">
