--- a/src/ui/astro/modal/Modal.astro
+++ b/src/ui/astro/modal/Modal.astro
@@ -71,7 +71,8 @@ const { open = false } = Astro.props;
   </div>
 </div> -->
 
-<style define:vars={{ isOpen: open }}>
+<!-- <style define:vars={{ isOpen: open }}> -->
+<style>
   .no-scroll {
     overflow: hidden;
   }
