--- a/src/web-component/astro-modal/index.astro
+++ b/src/web-component/astro-modal/index.astro
@@ -96,7 +96,7 @@ const { open } = Astro.props;
   customElements.define('astro-modal-l', AstroModal);
 </script>
 
-<style define:vars={{ isOpen }}>
+<style>
   .modal {
     width: 100%;
     height: 100%;
