--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,6 +26,7 @@ import NavDropDown from '@/ui/web-components/NavDropDown.astro';
         <HeaderLink href="/blog">Blog</HeaderLink>
         <HeaderLink href="/about">About</HeaderLink>
         <HeaderLink href="/ui">Ui</HeaderLink>
+        <HeaderLink href="/tags">tags</HeaderLink>
       </Switcher>
     </Cluster>
   </Box>
